# NIS1336_Schedulite

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
backend/: CMakeLists.txt
backend/dep/: CMakeLists.txt
backend/dep/PlatformFolders/: CMakeLists.txt
backend/dep/cpp-ipc/src/: CMakeLists.txt
backend/dep/cpp-ipc/src/libipc/utility/: log.h
backend/dep/date/include/date/: tz.h
backend/dep/filesystem/: CMakeLists.txt
backend/dep/interface/: CMakeLists.txt
backend/dep/interface/stduuid/: CMakeLists.txt
backend/dep/nowide/: CMakeLists.txt
backend/dep/plusaes/: plusaes.hpp
backend/dep/private/: CMakeLists.txt
backend/dep/private/PlatformFolders/: CMakeLists.txt
backend/dep/private/cpp-ipc/: CMakeLists.txt
backend/dep/private/cpp-ipc/src/libipc/platform/: detail.h
backend/dep/private/cpp-ipc/src/libipc/platform/linux/a0/: README.md
backend/dep/private/date/: CMakeLists.txt
backend/dep/stduuid/: CMakeLists.txt
backend/doc/: Doxyfile.in
backend/include/backend/: Encryption.hpp  Environment.hpp  Error.hpp  Instance.hpp  Schedule.hpp  Semaphore.hpp  Task.hpp  Time.hpp  User.hpp
backend/src/: Encryption.cpp  Environment.cpp  Instance.cpp  Schedule.cpp  Task.cpp  Time.cpp  User.cpp
cli/: CMakeLists.txt
cli/dep/: CMakeLists.txt
cli/dep/tabulate/: CMakeLists.txt
cli/dep/tinyfiledialogs/: CMakeLists.txt
cli/include/cli/: Format.hpp  Shell.hpp  Util.hpp
cli/src/: Format.cpp  Shell.cpp  Util.cpp  main.cpp
gui-gtk/: CMakeLists.txt
gui-gtk/dep/: CMakeLists.txt
gui-gtk/dep/gtkmm/: CMakeLists.txt
gui-gtk/dep/handy/: CMakeLists.txt
gui-gtk/src/: EnumFilterBox.cpp  EnumFilterBox.hpp  EnumSelectPopover.cpp  EnumSelectPopover.hpp  Icon.hpp  TaskDetailBox.cpp  TaskDetailBox.hpp  TaskFlowBox.cpp  TaskFlowBox.hpp  TaskFlowBoxChild.cpp  TaskFlowBoxChild.hpp  TaskInsertBox.cpp  TaskInsertBox.hpp  TaskListBox.cpp  TaskListBox.hpp  TaskListBoxRow.cpp  TaskListBoxRow.hpp  TimePopover.cpp  TimePopover.hpp  UserBox.cpp  UserBox.hpp  Window.cpp  Window.hpp  main.cpp
gui-gtk/ui/: CMakeLists.txt  Detail.glade  Edit.glade  Filter.glade  Insert.glade  Task.glade  Time.glade  User.glade  gen.cmake
